tests/interpreter/errors/unary_type_error.mochi
let s = "text"
print(-s) // invalid unary minus on string